Capture mouse input to plugins on MouseDown

When a user presses a mouse button over a PDF, the PDF receives all
mouse input until there is a corresponding MouseUp. This is currently
broken for OOPIFs because the browser process doesn't know when a PDF
is supposed to capture input and so it doesn't always route events to
the right process. This change causes renderers to signal the browser
process for mouse capture when a PDF is is clicked.

Bug: 864957
Change-Id: If17587d5ca475d9a8ac03a3bba301d4084e6d4e3
Reviewed-on: https://chromium-review.googlesource.com/c/1203883
Commit-Queue: Ken Buchanan <kenrb@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: James MacLean <wjmaclean@chromium.org>
Reviewed-by: Alex Moshchuk <alexmos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596893}
Former-commit-id: d1d30d1cb3dc5ce0a18ec0fb129cf9e2d506a8b6